--- a/TODO.txt
+++ b/TODO.txt
@@ -2,6 +2,7 @@ Before release!
 [ ] verwijder enter als go to next level 'cheat'
 [ ] icon
 [ ] executable fixen
+[ ] win condition
 
 Casper
 [ ] muziek
