--- a/TODO.txt
+++ b/TODO.txt
@@ -32,4 +32,5 @@ EXTRA
 
 
 Enemy HP calculatie:
+(Aantal hits nodig voor kill)
 https://docs.google.com/spreadsheets/d/1Gr_7ezPX56n81JdBWa1fO_FWFfUtLhf8C41edkUVd3M/edit?usp=sharing
