--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+[ ] readme niet inpakken
+[ ] deze todo verwijderen
+
 [-] muziek
 [ ] meer sound fx
 [ ] add items to z-ordering
@@ -5,13 +8,14 @@
 [-] meer enemies
 
 [ ] name ( Renegade, CarcerAlte klint wel vet :P)
-[x] level design/ xp scaling/ enemy spawn formule
+[ ] level design/ xp scaling/ enemy spawn formule
+
 
 EXTRA
 [ ] Extra hazards
 [ ] Level variatie (cracks in de muren etc.)
 [?] Endgame cutscene
-[x] Death screen / win screen prentje
+
 
 Enemy HP calculatie:
 (Aantal hits nodig voor kill)
